# smart-traffic-violation-pattern-detector-dashboard

./: MIT licence  PROJECT_BLUEPRINT_4-AGILE_DOCUMENTATION.md  PROJECT_BLUEPRINT_5-WORKFLOW_TIMELINE.md  README.md  app.py  pyproject.toml
core/: data_generator.py  data_variables.py  sidebar.py  summary.py  utils.py
other_party_uploads/: AnimalDataLabel.csv
pages/: 00_Home_Page.py  01_Numerical_Analysis.py  02_Visualize_Data.py  03_Trend_Analysis.py  04_Map_Visualization.py  05_Know_Your_Data.py  09_Upload_Dataset.py  10_View_Dataset.py
